--- a/src/assets/style/home.module.css
+++ b/src/assets/style/home.module.css
@@ -2,14 +2,44 @@
     width: 100%;   
     display: flex;
     justify-content: center;
-    align-items: center;
-    
+    padding: 100px 0px;
 }
 .card{
-    width: 90%;
-    padding-top: 100px;
+    position: relative;
 }
-.absolute{
+.blur{
     position: absolute;
-    bottom: 80px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: aliceblue;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+   
+}
+.blur .label{
+    padding: 20px 10px;
+}
+.button{
+    width: 80px;
+   box-sizing: content-box;
+   margin-right: 20px;
+   padding: 10px;
+   border-radius: 20px;
+   border:1px solid red;
+   background-color: rgba(0, 0, 0, 0);
+   color:red;
+   text-transform:lowercase ;
+}
+.buttondiv{
+   
+    width: 100%;
+    justify-content: end;
+    display: flex;
+    width: 100%;
+    box-sizing: content-box;
+    padding: 20px 0px;
+    
 }
