--- a/src/assets/style/home.module.css
+++ b/src/assets/style/home.module.css
@@ -1,45 +1,53 @@
-.container{
-    width: 100%;   
+body {
+  display: flex;
+  justify-content: center;
+}
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 100px 0px;
+}
+.cardlist{
+    width: 90%;
+}
+.card {
+  position: relative;
+}
+.card:hover .blur{
     display: flex;
-    justify-content: center;
-    padding: 100px 0px;
 }
-.card{
-    position: relative;
+.blur {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: aliceblue;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
 }
-.blur{
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.6);
-    color: aliceblue;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-   
+.blur .label {
+  padding: 20px 15px;
+  background-color: rgb(255, 111, 0);
 }
-.blur .label{
-    padding: 20px 10px;
+.button {
+  width: 80px;
+  box-sizing: content-box;
+  margin-right: 20px;
+  padding: 10px;
+  border-radius: 20px;
+  border: 1px solid red;
+  background-color: rgba(0, 0, 0, 0);
+  color: red;
+  text-transform: lowercase;
 }
-.button{
-    width: 80px;
-   box-sizing: content-box;
-   margin-right: 20px;
-   padding: 10px;
-   border-radius: 20px;
-   border:1px solid red;
-   background-color: rgba(0, 0, 0, 0);
-   color:red;
-   text-transform:lowercase ;
-}
-.buttondiv{
-   
-    width: 100%;
-    justify-content: end;
-    display: flex;
-    width: 100%;
-    box-sizing: content-box;
-    padding: 20px 0px;
-    
+.buttondiv {
+  width: 100%;
+  justify-content: end;
+  display: flex;
+  width: 100%;
+  box-sizing: content-box;
+  padding: 20px 0px;
 }
