--- a/src/assets/style/detail.module.css
+++ b/src/assets/style/detail.module.css
@@ -1,6 +1,91 @@
-.container{
-    background-color: aqua;
-    width: 100%;
-    height: 100vh;
-
+@font-face {
+  font-family: Poppins;
+  src: url('../fonts/poppins/Poppins-Regular.ttf');
+}
+.container {
+  width: 100%;
+  height: 100vh;
+  display:flex;
+  flex-direction: column;
+  padding: 100px 0px;
+  align-items: center;
+}
+.authorName{
+  font-family: Poppins;
+  font-size: 14px;
+  color: gray;
+}
+.layer {
+  width: 90%;
+  padding: 0px 20px 70px 20px;
+  background-color:floralwhite;
+}
+.person img {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0px;
+}
+.likeButton {
+  padding: 5px 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 4px;
+  background-color: transparent;
+  gap: 5px;
+  font-family: Poppins;
+  color: gray;
+}
+/* .likeButton:hover{
+    background-color: deepskyblue;
+} */
+.likediv {
+  display: flex;
+  align-items: center;
+}
+.authorInfo {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.box {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  gap: 40px;
+}
+.mainphoto img {
+  width: 500px;
+  object-fit: cover;
+}
+.aboutPhoto{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.aboutPhoto p{
+  display: flex;
+  align-items: center;
+  font-family: Poppins;
+  font-size: 15px;
+  color: gray;
+  gap: 10px;
+}
+.aboutPhoto span{
+  display: flex;
+  color:gray;
+  align-items: center;
+  font-family: Poppins;
+  font-size: 15px;
+  gap: 10px;
 }
