--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -40,3 +40,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+@font-face {
+	font-family: Poppins;
+	src: url('../fonts/poppins/Poppins-Regular.ttf');
+}
