--- a/src/assets/style/home.module.css
+++ b/src/assets/style/home.module.css
@@ -1,7 +1,3 @@
-body {
-  display: flex;
-  justify-content: center;
-}
 .container {
   width: 100%;
   display: flex;
@@ -43,11 +39,15 @@ body {
   color: red;
   text-transform: lowercase;
 }
+.likebtn{
+  background-color: transparent;
+  border: none;
+}
 .buttondiv {
   width: 100%;
-  justify-content: end;
   display: flex;
+  justify-content: space-between;
   width: 100%;
   box-sizing: content-box;
-  padding: 20px 0px;
+  padding: 20px 10px;
 }
