--- a/src/assets/style/login.module.css
+++ b/src/assets/style/login.module.css
@@ -1,5 +1,91 @@
-.container{
-    background-color: red;
-    width: 100%;
-    height: 100vh;
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #00c9ff; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #92fe9d,
+    #00c9ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #92fe9d,
+    #00c9ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.background {
+  display: flex;
+  width: 25%;
+  height: 400px;
+  justify-content: center;
+  padding: 20px;
+  border-radius: 15px;
+  border: gray 1px solid;
+  background-color:aliceblue
+}
+.einput {
+  border-radius: 7px;
+  border: 2px solid rgb(195, 195, 195);
+  width: 90%;
+  padding: 7px 10px;
+  font-family: Poppins;
+}
+.einput:focus {
+  border: 2px solid rgb(0, 255, 42);
+  outline: none;
+}
+
+.label {
+  font-family: Poppins;
+  text-align: start;
+  width: 95%;
+  padding: 5px 3px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 95%;
+  gap: 10px;
+}
+.form {
+  display: flex;
+  gap: 10px;
+  width: 100%;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.error {
+  font-size: 12px;
+  padding: 5px;
+  width: 95%;
+  color: red;
+  font-family: Poppins;
+}
+.submitbtn {
+  background-color: rgb(0, 255, 42);
+  outline: none;
+  border-radius: 7px;
+  width: 90%;
+  border: none;
+  padding: 10px;
+  color: black;
+  font-family: Poppins;
+  transition: .6s all ease;
+}
+.submitbtn:hover{
+  background-color: rgb(0, 224, 0);
+  transition: .6s all ease;
+}
+.signup{
+  color: blue;  
+}
+.anyacc{
+  margin-top: 10px;
+  font-family: Poppins;
+  font-size: 14px;
 }
