--- a/src/assets/style/home.module.css
+++ b/src/assets/style/home.module.css
@@ -9,9 +9,12 @@
 }
 .card {
   position: relative;
+  transition: .5s ease;
 }
 .card:hover .blur{
     display: flex;
+    transition: .5s ease;
+    cursor: pointer;
 }
 .blur {
   position: absolute;
@@ -19,35 +22,65 @@
   color: aliceblue;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   top: 0;
   display: none;
   flex-direction: column;
   justify-content: space-between;
+  transition: .5s ease;
 }
 .blur .label {
-  padding: 20px 15px;
-  background-color: rgb(255, 111, 0);
+  padding: 20px 25px;
+  background-color: rgba(23, 23, 23, 0.4);
+  font-family: Poppins;
+  font-size: 14px;
 }
-.button {
-  width: 80px;
-  box-sizing: content-box;
+.author{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  font-family: Poppins;
+  font-size: 14px;
+}
+.authorph{
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.likebtn{ 
+  background-color: transparent;
+  padding: 0;
   margin-right: 20px;
-  padding: 10px;
-  border-radius: 20px;
-  border: 1px solid red;
-  background-color: rgba(0, 0, 0, 0);
-  color: red;
-  text-transform: lowercase;
+  border: none;
+  transition: .5s ease;
+  color: white;
+  cursor: pointer;
 }
-.likebtn{
+.delbtn {
+  margin-right: 20px;
   background-color: transparent;
   border: none;
+  transition: .5s ease;
+  color: white;
+  cursor: pointer;
+}
+.likebtn:hover{
+  color: rgb(78, 255, 47);
+  transition: .5s ease;
+}
+.delbtn:hover{
+  color: rgb(207, 0, 0);
+  transition: .5s ease;
 }
 .buttondiv {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   box-sizing: content-box;
-  padding: 20px 10px;
+  padding: 15px 10px;
 }
+
